--- a/src/app/pages/inbox/components/not-found/not-found.component.html
+++ b/src/app/pages/inbox/components/not-found/not-found.component.html
@@ -1,14 +1,13 @@
-<section class="bg-white">
+<section class="bg-white h-full mx-4 pb-12 rounded-s shadow-md">
   <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
     <div class="flex flex-col items-center mx-auto max-w-screen-sm text-center">
-    
       <img src="../../../../../assets/images/error-404.png" alt="err">
       <p class="mb-4 text-3xl tracking-tight font-bold text-gray-900 md:text-4xl ">معاملة غير موجودة
       </p>
       <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">المعاملة التي تحاول الوصول اليها غير موجودة او ليس
         لديك الصلاحية للاطلاع عليها , يرجي التواصل مع الدعم الفني في حالة وجود خطأ </p>
       <a
-        class="inline-flex text-white bg-green-600 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center my-4" >العودة
+        class="inline-flex text-white bg-green-600 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center my-4" [routerLink]="['/inbox']">العودة
         الى الرئيسية</a>
       </div>
       </div>
