--- a/src/app/pages/inbox/components/placeholder/placeholder.component.html
+++ b/src/app/pages/inbox/components/placeholder/placeholder.component.html
@@ -1,5 +1,16 @@
-<div class="inline-block bg-white">
-<p>
-  placeholder works!
-</p>
-</div>
+<section class="bg-white h-full mx-4 pb-20 rounded-s shadow-md">
+  <div class="px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
+    <div class="flex flex-col items-center mx-auto max-w-screen-sm text-center">
+      <svg fill="none" color="green" class="w-1/6 h-full" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
+        xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+        <path stroke-linecap="round" stroke-linejoin="round"
+          d="M9 3.75H6.912a2.25 2.25 0 00-2.15 1.588L2.35 13.177a2.25 2.25 0 00-.1.661V18a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18v-4.162c0-.224-.034-.447-.1-.661L19.24 5.338a2.25 2.25 0 00-2.15-1.588H15M2.25 13.5h3.86a2.25 2.25 0 012.012 1.244l.256.512a2.25 2.25 0 002.013 1.244h3.218a2.25 2.25 0 002.013-1.244l.256-.512a2.25 2.25 0 012.013-1.244h3.859M12 3v8.25m0 0l-3-3m3 3l3-3">
+        </path>
+      </svg>
+      <p class="mb-4 text-3xl tracking-tight font-bold text-gray-900 md:text-4xl "> الوارد الرئيسية
+      </p>
+      <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">اختر معاملة ليتم عرضها
+      </p>
+    </div>
+  </div>
+  </section>
