--- a/src/app/pages/tasks/views/data-grid/data-grid.component.html
+++ b/src/app/pages/tasks/views/data-grid/data-grid.component.html
@@ -83,7 +83,7 @@
       </td>
       <td class="px-6 py-4 flex justify-around">
         <a class="font-medium text-green-600  hover:underline">Edit</a>
-        <a class="font-medium text-red-600  hover:underline" (click)="openConfirmModal()">Remove</a>
+        <a class="font-medium text-red-600  hover:underline" (click)="openConfirmModal(task.id)">Remove</a>
       </td>
     </tr>
   </tbody>
@@ -114,17 +114,20 @@
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
           d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
       </svg>
-      <h3 class="mb-5 text-lg font-normal text-gray-500 ">Are you sure you want to delete this
-        product?
+      <h3 class="mb-5 text-lg font-normal text-gray-500 ">متأكد من رغبتك باتمام العملية ؟
       </h3>
       <button data-modal-hide="popup-modal" type="button"
-        class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2">
-        Yes, I'm sure
+        class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center mr-2" (click)="deleteTask()">
+        تأكيد
       </button>
       <button data-modal-hide="popup-modal" type="button"
-        class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10">No,
-        cancel</button>
+        class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-200 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10" (click)="closeConfirmModal()">الغاء</button>
     </div>
   </div>
 </app-confirm-modal>
 <!-- confirm-modal -->
+<!-- toast-modal -->
+<app-toast *ngIf="showToast" (dismiss)="dismissToast($event)" toastMessage="عملية ناجحة" toastType="success"
+  toastTitle="">
+</app-toast>
+<!-- toast-modal -->
