--- a/src/app/pages/tasks/views/data-grid/data-grid.component.html
+++ b/src/app/pages/tasks/views/data-grid/data-grid.component.html
@@ -1,3 +1,51 @@
+<div class="relative overflow-x-auto shadow-md sm:rounded-lg px-2 py-2">
+  <div class="flex items-center justify-between px-4 py-4 bg-white ">
+    <div>
+      <button id="dropdownActionButton" data-dropdown-toggle="dropdownAction"
+        class="inline-flex items-center text-gray-500 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-3 py-1.5"
+        type="button">
+        <span class="sr-only">Action button</span>
+        Action
+        <svg class="w-3 h-3 ml-2" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+        </svg>
+      </button>
+      <!-- Dropdown menu -->
+      <div id="dropdownAction" class="z-10 absolute bg-white divide-y divide-gray-100 rounded-lg shadow w-44  ">
+        <ul class="py-1 text-sm text-gray-700 " aria-labelledby="dropdownActionButton">
+          <li>
+            <a class="block px-4 py-2 hover:bg-gray-100 ">Reward</a>
+          </li>
+          <li>
+            <a class="block px-4 py-2 hover:bg-gray-100 ">Promote</a>
+          </li>
+          <li>
+            <a class="block px-4 py-2 hover:bg-gray-100 ">Activate
+              account</a>
+          </li>
+        </ul>
+        <div class="py-1">
+          <a class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 ">Delete
+            User</a>
+        </div>
+      </div>
+    </div>
+    <label for="table-search" class="sr-only">Search</label>
+    <div class="relative">
+      <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+        <svg class="w-5 h-5 text-gray-500 " aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd"
+            d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+            clip-rule="evenodd"></path>
+        </svg>
+      </div>
+      <input type="text" id="table-search-users"
+        class="block p-2 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-green-500 focus:border-green-500 "
+        placeholder="">
+    </div>
+  </div>
 <table class="max-w-full w-full text-sm text-center text-gray-500 ">
   <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
     <tr>
@@ -93,6 +141,7 @@
     </div>
   </ng-template>
 </table>
+</div>
 <!-- confirm-modal -->
 <app-confirm-modal *ngIf="showConfiramtionModel">
   <div modal-header>
