--- a/src/app/pages/tasks/views/data-grid/data-grid.component.html
+++ b/src/app/pages/tasks/views/data-grid/data-grid.component.html
@@ -3,7 +3,7 @@
     <div>
       <button id="dropdownActionButton" data-dropdown-toggle="dropdownAction"
         class="inline-flex items-center text-gray-500 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-3 py-1.5"
-        type="button">
+        type="button" (click)="toggleActionsDDL()">
         <span class="sr-only">Action button</span>
         Action
         <svg class="w-3 h-3 ml-2" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24"
@@ -12,7 +12,8 @@
         </svg>
       </button>
       <!-- Dropdown menu -->
-      <div id="dropdownAction" class="z-10 absolute bg-white divide-y divide-gray-100 rounded-lg shadow w-44  ">
+      <div id="dropdownAction" class="z-10 bg-white divide-y divide-gray-100 rounded-lg shadow w-44 "
+        [ngClass]="(showActions === false) ? 'hidden': 'absolute'">
         <ul class="py-1 text-sm text-gray-700 " aria-labelledby="dropdownActionButton">
           <li>
             <a class="block px-4 py-2 hover:bg-gray-100 ">Reward</a>
