--- a/src/app/pages/tasks/views/data-grid/data-grid.component.html
+++ b/src/app/pages/tasks/views/data-grid/data-grid.component.html
@@ -1,29 +1,25 @@
 <div class="relative overflow-x-auto shadow-md sm:rounded-lg px-2 py-2">
-  <div class="flex items-center justify-between px-4 py-4 bg-white ">
+  <div class="flex flex-row-reverse items-center justify-between px-4 py-4 bg-white ">
     <div>
       <button id="dropdownActionButton" data-dropdown-toggle="dropdownAction"
         class="inline-flex items-center text-gray-500 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-3 py-1.5"
         type="button" (click)="toggleActionsDDL()">
         <span class="sr-only">Action button</span>
-        Action
+        الاجراءات
         <svg class="w-3 h-3 ml-2" aria-hidden="true" fill="none" stroke="currentColor" viewBox="0 0 24 24"
           xmlns="http://www.w3.org/2000/svg">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
         </svg>
       </button>
       <!-- Dropdown menu -->
-      <div id="dropdownAction" class="z-10 bg-white divide-y divide-gray-100 rounded-lg shadow w-44 "
+      <div id="dropdownAction" class="z-10 top-4 right-40 bg-white divide-y divide-gray-100 rounded-lg shadow w-44 "
         [ngClass]="(showActions === false) ? 'hidden': 'absolute'">
         <ul class="py-1 text-sm text-gray-700 " aria-labelledby="dropdownActionButton">
           <li>
-            <a class="block px-4 py-2 hover:bg-gray-100 ">Reward</a>
+            <a class="block px-4 py-2 hover:bg-gray-100 ">تفعيل</a>
           </li>
           <li>
-            <a class="block px-4 py-2 hover:bg-gray-100 ">Promote</a>
-          </li>
-          <li>
-            <a class="block px-4 py-2 hover:bg-gray-100 ">Activate
-              account</a>
+            <a class="block px-4 py-2 hover:bg-gray-100 ">تعطيل</a>
           </li>
         </ul>
         <div class="py-1">
