--- a/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
+++ b/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
@@ -1,4 +1,4 @@
-<div class="mb-4  border-gray-200 ">
+<div class=" border-gray-200 ">
   <ul class="flex flex-row-reverse flex-wrap -mb-px text-sm font-medium text-center" id="myTab"
     data-tabs-toggle="#myTabContent" role="tablist">
     <li class="mr-2" role="presentation">
@@ -80,6 +80,19 @@
           viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round"
             d="M18.375 12.739l-7.693 7.693a4.5 4.5 0 01-6.364-6.364l10.94-10.94A3 3 0 1119.5 7.372L8.552 18.32m.009-.01l-.01.01m5.699-9.941l-7.81 7.81a1.5 1.5 0 002.112 2.13">
+          </path>
+        </svg>
+      </a>
+    </li>
+    <li class="mr-2" role="presentation">
+      <a (click)="openAssignmentTab()"
+        class="inline-flex p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 group"
+        [ngClass]="(activeTab == 'الاحالة') ? 'active':''">
+        الاحالة
+        <svg class="w-5 h-5 mr-2 text-gray-400 group-hover:text-gray-500" fill="none" stroke="currentColor"
+          stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5m-13.5-9L12 3m0 0l4.5 4.5M12 3v13.5">
           </path>
         </svg>
       </a>
@@ -287,7 +300,7 @@
   </div>
   <!-- الشروحات -->
   <!-- المرفقات -->
-  <div class="bg-white shadow-md rounded-s m-5 p-4 pb-20" *ngSwitchCase="'المرفقات'">
+  <div class="bg-white shadow-md rounded-s m-5 p-4 " *ngSwitchCase="'المرفقات'">
     <div class="flex flex-row-reverse justify-between mb-8">
       <h3 class="font-semibold">المرفقات</h3>
       <button type="button"
@@ -319,8 +332,40 @@
     </div>
   </div>
   <!-- المرفقات -->
+  <!-- الاحالة -->
+  <div class="bg-white shadow-md rounded-s m-5 p-4 pb-20" *ngSwitchCase="'الاحالة'">
+    <!-- tab header -->
+    <div class="flex flex-row-reverse justify-between ">
+      <h3 class="font-semibold">الاحالة</h3>
+      <button type="button"
+        class="text-white bg-gradient-to-bl from-green-500 to-green-800 hover:bg-gradient-to-r focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-md shadow-lg text-sm p-2.5 text-center inline-flex items-center mr-2 ">
+        <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round"
+            d="M6.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM12.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0zM18.75 12a.75.75 0 11-1.5 0 .75.75 0 011.5 0z">
+          </path>
+        </svg>
+        <span class="sr-only">Icon description</span>
+      </button>
+    </div>
+    <!-- tab header -->
+    <!-- tab body -->
+    <div class="flex flex-row-reverse   ">
+      <!-- TODO: mark -->
+      <div class="flex-none">
+        <ul class="flex flex-nowrap flex-row-reverse text-sm font-medium text-center text-gray-500 ">
+          <li class="" *ngFor="let tab of tabs">
+            <a [ngClass]="(selectedTabId === tab.id)? 'mx-1 bg-gradient-to-bl from-green-400 to-green-700 inline-block px-4 py-2 my-1 text-white border-solid border-1 border-gray-200 rounded-sm shadow-inner':'mx-1 inline-block px-4 py-2 my-1 border-solid border-2 border-gray-200 rounded-sm hover:text-gray-900 hover:bg-gray-200' "
+              class="" (click)="selectTab(tab.id)">{{tab.label}}</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- tab body -->
+  </div>
+  <!-- الاحالة -->
   <div *ngSwitchDefault>
-    default
+    في حاجة غلط
   </div>
   </section>
   <!-- tab -->
