--- a/src/app/shared/side-bar/side-bar.component.html
+++ b/src/app/shared/side-bar/side-bar.component.html
@@ -75,13 +75,15 @@
 
     <div class="mt-auto h-16 flex items-center w-full">
       <!-- Action Section -->
-      <button class="h-16 w-10 mx-auto flex justify-center items-center">
+      <button class="signout-button h-16 w-10 mx-auto flex justify-center items-center">
+        <a [routerLink]="['/signout']">
         <svg class="w-5 h-5 hover:text-green-700" fill="none" stroke="currentColor" stroke-width="1.5"
           viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round"
             d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15M12 9l-3 3m0 0l3 3m-3-3h12.75">
           </path>
         </svg>
+        </a>
       </button>
     </div>
   </div>
