--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -39,7 +39,13 @@
                     <a class="block max-w-sm p-2 my-1 bg-white border border-gray-200 rounded-s shadow hover:bg-gray-50"
                         [routerLink]="treatment.id" routerLinkActive="active">
                         <div class="flex flex-row-reverse justify-between">
+                            
                             <h5 class="mb-2 font-semibold text-gray-900"> {{treatment.subject}}</h5>
+                            <div class="indicator inline-flex items-start justify-around">
+                                <span class="flex w-3 h-3 mx-0.5 bg-gray-200 rounded-full"></span>
+                                <span class="flex w-3 h-3 mx-0.5 bg-gray-900 rounded-full dark:bg-gray-700"></span>
+                                <span class="flex w-3 h-3 mx-0.5 bg-red-500 rounded-full"></span>
+                            </div>
                             <p>
                                 <svg color="green" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
