--- a/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
+++ b/src/app/pages/inbox/views/tab-bar/tab-bar.component.html
@@ -404,24 +404,52 @@
               <label for="mangment-ddl">
                 اسم الادارة
               </label>
-              <select name="mangment-ddl" id="" class="h-12 text-right bg-slate-50">
+              <select name="mangment-ddl" id="" class="h-12 text-right shadow  bg-slate-50">
                 <option value="" [defaultSelected]="true">اختر الادارة</option>
                 <option value="2">فلان الفلان الفلاني ادارة</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
               </select>
             </div>
-            <div class="flex flex-col w-full mr-1">
+            <div class="flex flex-col w-full mr-1 ">
               <label for="emp-ddl">
                 اسم الموظف
               </label>
-              <select name="mangment-ddl" id="" class="h-12 text-right bg-slate-50">
-                <option value="" [defaultSelected]="true">اختر الموظف</option>
-                <option value="2">فلان الفلان الفلاني</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-              </select>
-            </div>
+              <button name="emp-ddl" id=""
+                class="h-12 text-right shadow  bg-slate-50 flex flex-row-reverse justify-between items-center" (click)="openEmpDDL()">
+                اختر الموظف
+                <svg fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"></path>
+                </svg>
+              </button>
+              <div class="p-3 relative bg-white shadow w-full" *ngIf="empddl">
+                <label for="input-group-search" class="sr-only">Search</label>
+                <div class="relative">
+                  <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+                    <svg class="w-5 h-5 text-gray-500 dark:text-gray-400" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd"
+                        d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                        clip-rule="evenodd"></path>
+                    </svg>
+                  </div>
+                  <input type="text" id="input-group-search"
+                    class="block w-full p-2 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-green-500 focus:border-green-500 text-right"
+                    placeholder="اسم الموظف">
+                </div>
+                <ul class="h-full px-3 pb-3 overflow-y-hidden text-sm text-gray-700 overflow-x-hidden">
+                  <li>
+                    <div class="flex items-center pl-2 rounded hover:bg-gray-100 ">
+                      <input checked id="checkbox-item-12" type="checkbox" value=""
+                        class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 focus:ring-2 ">
+                      <label for="checkbox-item-12" class="w-full py-2 ml-2 text-sm font-medium text-gray-900 rounded">احمد علي
+                      </label>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              </div>
           </div>
         </div>
         <div *ngSwitchDefault>default</div>
