--- a/src/styles.sass
+++ b/src/styles.sass
@@ -15,3 +15,17 @@ svg
   cursor: pointer
 a 
   cursor: pointer
+*
+  scrollbar-width: thin
+  scrollbar-color: gray white
+
+  &::-webkit-scrollbar
+    width: 12px
+
+  &::-webkit-scrollbar-track
+    background: white
+
+  &::-webkit-scrollbar-thumb
+    background-color: gray
+    border-radius: 20px
+    border: 3px solid white
