--- a/src/app/pages/inbox/components/home/home.component.html
+++ b/src/app/pages/inbox/components/home/home.component.html
@@ -30,7 +30,13 @@
 <div class="main-content">
     <div class="columns-1 mr-5">
         <div
-            class="text-green-700 border-solid border-2 border-gray-200 rounded-s font-semibold bg-white inline-block w-96 p-2 ">
+            class="text-green-700 border-solid border-2 border-gray-200 rounded-s font-semibold bg-white w-96 p-2.5  flex justify-between items-center">
+            <svg fill="none" stroke="currentColor" stroke-width="2.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 00-3.7-3.7 48.678 48.678 0 00-7.324 0 4.006 4.006 0 00-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3l-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 003.7 3.7 48.656 48.656 0 007.324 0 4.006 4.006 0 003.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3l-3 3">
+                </path>
+            </svg>
             المعاملات</div>
         <ul class="">
             <div class="treatments w-96 p-2 my-1 h-96 overflow-y-scroll" *ngIf="(treatments$|async); else placeholder">
